# emulate-game-boy

core/: CMakeLists.txt
core/include/: central_processing_unit.h  emulator.h
core/src/: central_processing_unit.cpp  emulator.cpp  memory_management_unit.cpp
frontend/src/: main.cpp
